{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 77,
  "lineage": "db913b78-5da3-73e3-0441-1a9d5edc4b42",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "ec2_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:891228633881:targetgroup/my-test-tg/e1c7ae2d2c460d66-20220717162705471400000003",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891228633881:targetgroup/my-test-tg/e1c7ae2d2c460d66",
            "target_id": "i-0db1aa714e6207288"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_instance.base",
            "aws_key_pair.keypair",
            "aws_lb_target_group.my-target-group",
            "aws_security_group.allow_ports"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:891228633881:targetgroup/my-test-tg/e1c7ae2d2c460d66-20220717162705149200000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891228633881:targetgroup/my-test-tg/e1c7ae2d2c460d66",
            "target_id": "i-085f4ed7ad13b3cc6"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_instance.base",
            "aws_key_pair.keypair",
            "aws_lb_target_group.my-target-group",
            "aws_security_group.allow_ports"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:891228633881:targetgroup/my-test-tg/e1c7ae2d2c460d66-20220717162705309900000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891228633881:targetgroup/my-test-tg/e1c7ae2d2c460d66",
            "target_id": "i-0c8a9bfd34640fa79"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_instance.base",
            "aws_key_pair.keypair",
            "aws_lb_target_group.my-target-group",
            "aws_security_group.allow_ports"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891228633881:vpc/vpc-0dcd6b1ea84f5526a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-02fa851a49c671e1f",
            "default_route_table_id": "rtb-084b848c00a5b56de",
            "default_security_group_id": "sg-0792afe32665aed40",
            "dhcp_options_id": "dopt-0a619be52531c28d8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0dcd6b1ea84f5526a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-084b848c00a5b56de",
            "owner_id": "891228633881",
            "tags": {
              "Name": "Deafult VPC"
            },
            "tags_all": {
              "Name": "Deafult VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "myeip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0df58520357ff03f7",
            "association_id": "eipassoc-04531db9fc340f667",
            "domain": "vpc",
            "id": "eipalloc-0df58520357ff03f7",
            "instance": "i-0db1aa714e6207288",
            "network_border_group": "us-east-1",
            "network_interface": "eni-083a3dc6fcb3800c0",
            "private_dns": "ip-172-31-94-251.ec2.internal",
            "private_ip": "172.31.94.251",
            "public_dns": "ec2-44-207-108-214.compute-1.amazonaws.com",
            "public_ip": "44.207.108.214",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-Crash-Server_{count.index + 1}"
            },
            "tags_all": {
              "Name": "eip-Crash-Server_{count.index + 1}"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_instance.base",
            "aws_key_pair.keypair",
            "aws_security_group.allow_ports"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08ab9d0fd480fadee",
            "association_id": "eipassoc-0b4ecc7d0af9f335f",
            "domain": "vpc",
            "id": "eipalloc-08ab9d0fd480fadee",
            "instance": "i-085f4ed7ad13b3cc6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c2ee38e95a83093e",
            "private_dns": "ip-172-31-88-133.ec2.internal",
            "private_ip": "172.31.88.133",
            "public_dns": "ec2-34-194-53-17.compute-1.amazonaws.com",
            "public_ip": "34.194.53.17",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-Crash-Server_{count.index + 1}"
            },
            "tags_all": {
              "Name": "eip-Crash-Server_{count.index + 1}"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_instance.base",
            "aws_key_pair.keypair",
            "aws_security_group.allow_ports"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e5f4961aae5c8c8",
            "association_id": "eipassoc-03661049a284edad4",
            "domain": "vpc",
            "id": "eipalloc-09e5f4961aae5c8c8",
            "instance": "i-0c8a9bfd34640fa79",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07ae035ef09bd1842",
            "private_dns": "ip-172-31-81-55.ec2.internal",
            "private_ip": "172.31.81.55",
            "public_dns": "ec2-3-215-10-154.compute-1.amazonaws.com",
            "public_ip": "3.215.10.154",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-Crash-Server_{count.index + 1}"
            },
            "tags_all": {
              "Name": "eip-Crash-Server_{count.index + 1}"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_instance.base",
            "aws_key_pair.keypair",
            "aws_security_group.allow_ports"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "base",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:891228633881:instance/i-0db1aa714e6207288",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0db1aa714e6207288",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Crash-Server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-083a3dc6fcb3800c0",
            "private_dns": "ip-172-31-94-251.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.94.251",
            "public_dns": "ec2-34-237-243-166.compute-1.amazonaws.com",
            "public_ip": "34.237.243.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05b54daa028ac82a8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ports1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0af58a094e7d79d56",
            "tags": {
              "Name": "Crash-Server_{count.index}"
            },
            "tags_all": {
              "Name": "Crash-Server_{count.index}"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07dad65137f0fc5db"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_key_pair.keypair",
            "aws_security_group.allow_ports"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:891228633881:instance/i-085f4ed7ad13b3cc6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-085f4ed7ad13b3cc6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Crash-Server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c2ee38e95a83093e",
            "private_dns": "ip-172-31-88-133.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.88.133",
            "public_dns": "ec2-54-173-223-69.compute-1.amazonaws.com",
            "public_ip": "54.173.223.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c98cdf0ecc973374",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ports1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0af58a094e7d79d56",
            "tags": {
              "Name": "Crash-Server_{count.index}"
            },
            "tags_all": {
              "Name": "Crash-Server_{count.index}"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07dad65137f0fc5db"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_key_pair.keypair",
            "aws_security_group.allow_ports"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:891228633881:instance/i-0c8a9bfd34640fa79",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c8a9bfd34640fa79",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Crash-Server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07ae035ef09bd1842",
            "private_dns": "ip-172-31-81-55.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.81.55",
            "public_dns": "ec2-100-24-5-143.compute-1.amazonaws.com",
            "public_ip": "100.24.5.143",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01dbefeb00a24268a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ports1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0af58a094e7d79d56",
            "tags": {
              "Name": "Crash-Server_{count.index}"
            },
            "tags_all": {
              "Name": "Crash-Server_{count.index}"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07dad65137f0fc5db"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_key_pair.keypair",
            "aws_security_group.allow_ports"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "my-aws-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891228633881:loadbalancer/app/Crash-Server-test-alb/a4247dc9f4520511",
            "arn_suffix": "app/Crash-Server-test-alb/a4247dc9f4520511",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Crash-Server-test-alb-2075251594.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:891228633881:loadbalancer/app/Crash-Server-test-alb/a4247dc9f4520511",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Crash-Server-test-alb",
            "security_groups": [
              "sg-07dad65137f0fc5db"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0064a010ad4a80651"
              },
              {
                "subnet_id": "subnet-01a902a1242344996"
              },
              {
                "subnet_id": "subnet-032f51c1ece5b67c8"
              },
              {
                "subnet_id": "subnet-0af58a094e7d79d56"
              },
              {
                "subnet_id": "subnet-0d5ad4cef3a8dc319"
              },
              {
                "subnet_id": "subnet-0d7952f1e0c61b62a"
              }
            ],
            "subnets": [
              "subnet-0064a010ad4a80651",
              "subnet-01a902a1242344996",
              "subnet-032f51c1ece5b67c8",
              "subnet-0af58a094e7d79d56",
              "subnet-0d5ad4cef3a8dc319",
              "subnet-0d7952f1e0c61b62a"
            ],
            "tags": {
              "Name": "allow_ports1"
            },
            "tags_all": {
              "Name": "allow_ports1"
            },
            "vpc_id": "vpc-0dcd6b1ea84f5526a",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.allow_ports",
            "data.aws_subnet_ids.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "Crash-Server-test-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891228633881:listener/app/Crash-Server-test-alb/a4247dc9f4520511/76e88e42393f26f4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891228633881:targetgroup/my-test-tg/e1c7ae2d2c460d66",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891228633881:listener/app/Crash-Server-test-alb/a4247dc9f4520511/76e88e42393f26f4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:891228633881:loadbalancer/app/Crash-Server-test-alb/a4247dc9f4520511",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_lb.my-aws-alb",
            "aws_lb_target_group.my-target-group",
            "aws_security_group.allow_ports",
            "data.aws_subnet_ids.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891228633881:targetgroup/my-test-tg/e1c7ae2d2c460d66",
            "arn_suffix": "targetgroup/my-test-tg/e1c7ae2d2c460d66",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891228633881:targetgroup/my-test-tg/e1c7ae2d2c460d66",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "my-test-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dcd6b1ea84f5526a"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891228633881:security-group/sg-07dad65137f0fc5db",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07dad65137f0fc5db",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "tomcat port from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow_ports1",
            "name_prefix": "",
            "owner_id": "891228633881",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ports1"
            },
            "tags_all": {
              "Name": "allow_ports1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcd6b1ea84f5526a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}